Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
Help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Watched Subcomponents
JDK
JDK-8155087
Calculation in other_time_ms() is incorrect
Log In
Resolved
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Fixed
Priority:
P3
Fix Version/s:
9
Affects Version/s:
9
Component/s:
hotspot
Labels:
gc-g1
Subcomponent:
gc
Resolved In Build:
b120
Description
The calculation in other_time_ms() is incorrect and should be updated to subtract phase_times()->cur_collection_par_time_ms() from the total time instead of subtracting averages of some phases.
Attachments
Activity
People
Assignee:
Stefan Johansson
Reporter:
Stefan Johansson
Votes
:
0
Vote for this issue
Watchers:
3
Start watching this issue
Dates
Created:
2016-04-26 01:51
Updated:
2016-07-13 07:17
Resolved:
2016-04-27 08:25