8155087: Calculation in other_time_ms() is incorrect

Reviewed-by: tschatzl, ehelin