hotspot/src/share/vm/gc/g1/g1DefaultPolicy.cpp
@@ -549,11 +549,7 @@ double G1DefaultPolicy::non_young_other_time_ms() const {
 }
 
 double G1DefaultPolicy::other_time_ms(double pause_time_ms) const {
-  return pause_time_ms -
-         average_time_ms(G1GCPhaseTimes::UpdateRS) -
-         average_time_ms(G1GCPhaseTimes::ScanRS) -
-         average_time_ms(G1GCPhaseTimes::ObjCopy) -
-         average_time_ms(G1GCPhaseTimes::Termination);
+  return pause_time_ms - phase_times()->cur_collection_par_time_ms();
 }
 
 double G1DefaultPolicy::constant_other_time_ms(double pause_time_ms) const {
